# FederatedLearning

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  server.cpp
